[package]
name = "ptfl_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coolor = "0.5.0"
indexmap = { version = "1.9.1", features = ["rayon"] }
svg = "0.10.0"
tiny-skia = "0.7.0"
rayon = "1.5.3"
